<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_1">Version %1$s</string>
    <string name="about_2">"
© 2014–2017 Haringey Mobile

"</string>
    <string name="about_3">If you have a feature request or any complaints, you may create an issue on the issue tracker:</string>
    <string name="about_4">"

http://github.com/Kestutis-Z/World-Weather/issues

"</string>
    <string name="about_5">Alternatively, contact us at:</string>
    <string name="about_6">"

haringeymobile@gmail.com
"</string>
    <string name="about_version_number">1.2.5</string>
    <string name="app_name">World Weather</string>
    <string name="button_text_current_weather_conditions">"Current
weather"</string>
    <string name="button_text_remove_city">"Remove
city"</string>
    <string name="button_text_rename_city">"Rename
city"</string>
    <string name="button_text_weather_forecast_3_hourly">"3-hourly
forecast"</string>
    <string name="button_text_weather_forecast_daily">"16 day 
forecast"</string>
    <string name="city_add_hint">city,country</string>
    <string name="city_management_activity_name">City Management</string>
    <string name="city_search_button_text">Search</string>
    <string name="city_search_hint">Add city</string>
    <string name="city_searchable_hint">Search your cities</string>
    <string name="confirm">Confirm</string>
    <string name="coordinates_error_message_latitude_range">Latitude should be in range [-90, 90]</string>
    <string name="coordinates_error_message_longitude_range">Longitude should be in range [-180, 180]</string>
    <string name="coordinates_error_message_missing_separator">Provide two coordinates (latitude and longitude), separated by a comma, for example: 13.8,109.343; 48,77</string>
    <string name="coordinates_error_message_number_format">The coordinates should be integers or decimal numbers, for example: 29; 66.589</string>
    <string name="credits_1">CREDITS and LICENSES:</string>
    <string name="credits_10">PagerSlidingTabStrip - an interactive indicator to navigate between the different pages of a ViewPager</string>
    <string name="credits_11">"
https://github.com/astuetz/PagerSlidingTabStrip

"</string>
    <string name="credits_115">"© 2013 Andreas Stuetz
"</string>
    <string name="credits_12">Apache license for PagerSlidingTabStrip:</string>
    <string name="credits_13">"
http://www.apache.org/licenses/LICENSE-2.0

"</string>
    <string name="credits_131">DragSortListView - a subclass of the Android ListView component that enables drag and drop re-ordering of list items</string>
    <string name="credits_132">"
https://github.com/bauerca/drag-sort-listview

"</string>
    <string name="credits_133">"© 2012 Carl Bauer
"</string>
    <string name="credits_134">Apache license for DragSortListView:</string>
    <string name="credits_135">"
http://www.apache.org/licenses/LICENSE-2.0

"</string>
    <string name="credits_14">"Wind icon
Artist: Aha-Soft Team
License: Free for non-commercial use. Commercial usage: Not allowed"</string>
    <string name="credits_15">"
http://www.iconarchive.com/icons/large-icons/large-weather/license.txt

"</string>
    <string name="credits_16">Weblate – a web-based translation management system</string>
    <string name="credits_165">"
 © 2012–2016 Michal Čihař"</string>
    <string name="credits_17">"
https://weblate.org/en/?utm_source=weblate&amp;utm_term=2.9-dev

"</string>
    <string name="credits_18">Special thanks to our translators:</string>
    <string name="credits_19">You are welcome to contribute your own translations here:</string>
    <string name="credits_2">OpenWeatherMap - free weather data and forecast API</string>
    <string name="credits_20">"
https://hosted.weblate.org/projects/world-weather

"</string>
    <string name="credits_21">This app is open sourced! The source code can be found at</string>
    <string name="credits_22">"
https://github.com/Kestutis-Z/World-Weather

"</string>
    <string name="credits_23">Apache license for the source code and the compiled code:</string>
    <string name="credits_24">"
https://www.apache.org/licenses/LICENSE-2.0
"</string>
    <string name="credits_3">"
https://openweathermap.org

"</string>
    <string name="credits_4">All data are provided under the CC-BY-SA 2.0:</string>
    <string name="credits_5">"
http://creativecommons.org/licenses/by-sa/2.0

"</string>
    <string name="credits_6">Android Asset Studio - a set of icon generators and other tools</string>
    <string name="credits_7">"
http://android-ui-utils.googlecode.com/hg/asset-studio/dist/index.html

"</string>
    <string name="credits_8">Creative Commons 3.0 BY license for Android Asset Studio content:</string>
    <string name="credits_9">"
http://creativecommons.org/licenses/by/3.0/legalcode

"</string>
    <string name="data_not_available">N/A</string>
    <string name="days_few">days</string>
    <string name="days_many">days</string>
    <string name="days_one">day</string>
    <string name="days_other">days</string>
    <string name="days_two">days</string>
    <string name="days_zero">days</string>
    <string name="dialog_title_add_city">Add new city</string>
    <string name="dialog_title_delete_city">Delete %1$s and all associated records?</string>
    <string name="dialog_title_enter_personal_key">Enter your API key</string>
    <string name="dialog_title_no_cities_found">Your query has not returned any cities</string>
    <string name="dialog_title_no_network_connection">No connection</string>
    <string name="dialog_title_query_too_short">Enter at least three letters or numbers</string>
    <string name="dialog_title_rename_city">Enter a new name for %1$s:</string>
    <string name="dialog_title_search_results_part_1">Search results (with latitude and longitude)</string>
    <string name="dialog_title_search_results_part_2">Choose a city</string>
    <string name="direction_e">East</string>
    <string name="direction_ene">East-northeast</string>
    <string name="direction_ese">East-southeast</string>
    <string name="direction_n">North</string>
    <string name="direction_ne">NorthEast</string>
    <string name="direction_nne">North-northeast</string>
    <string name="direction_nnw">North-northwest</string>
    <string name="direction_nw">Northwest</string>
    <string name="direction_s">South</string>
    <string name="direction_se">SouthEast</string>
    <string name="direction_sse">South-southeast</string>
    <string name="direction_ssw">South-southwest</string>
    <string name="direction_sw">Southwest</string>
    <string name="direction_w">West</string>
    <string name="direction_wnw">West-northwest</string>
    <string name="direction_wsw">West-southwest</string>
    <string name="error_message_no_connection">No connection, please try later</string>
    <string name="error_message_no_data">No data provided by the Open Weather Map</string>
    <string name="evening">Evening:</string>
    <string name="hours_few">hours</string>
    <string name="hours_many">hours</string>
    <string name="mi_about_program_title">About</string>
    <string name="mi_city_management_title">@string/city_management_activity_name</string>
    <string name="mi_rate_application_title">Rate application</string>
    <string name="mi_search_title">Search</string>
    <string name="mi_settings_title">Settings</string>
    <string name="mi_submenu_title">Extras</string>
    <string name="pref_app_language_default">device_language</string>
    <string name="pref_app_theme_default">0</string>
    <string name="pref_app_theme_summary">Choose an app theme</string>
    <string name="pref_app_theme_title">App theme</string>
    <string name="pref_city_removal_mode_id_default">@string/pref_city_removal_mode_button_id</string>
    <string name="pref_city_removal_mode_summary">Choose how cities are removed from the list in City Management screen</string>
    <string name="pref_city_removal_mode_title">Deleting cities</string>
    <string name="pref_data_cache_period_default">20</string>
    <string name="pref_data_cache_period_summary">For efficiency reasons, the most recent weather data is stored locally, and reused for a short period of time. Here you can specify the time period after which the data will be refreshed via network.</string>
    <string name="pref_data_cache_period_title">Weather data reuse period</string>
    <string name="pref_forecast_display_mode_id_default">@string/pref_forecast_display_mode_list_id</string>
    <string name="pref_forecast_display_mode_summary">Choose how the three-hourly weather forecast is displayed</string>
    <string name="pref_forecast_display_mode_title">Three-hourly weather forecast display mode</string>
    <string name="pref_language_summary">Choose in-app language</string>
    <string name="pref_language_title">Language</string>
    <string name="pref_personal_api_key_summary">Select to use your own API key</string>
    <string name="pref_personal_api_key_title">Personal API key</string>
    <string name="pref_temperature_scale_id_default">@string/pref_temperature_scale_celsius_id</string>
    <string name="pref_temperature_scale_summary">Choose temperature scale</string>
    <string name="pref_temperature_scale_title">Temperature scale</string>
    <string name="pref_wind_direction_display_summary">Select to include wind direction in weather information</string>
    <string name="pref_wind_direction_display_title">Wind direction display</string>
    <string name="pref_wind_speed_unit_id_default">@string/pref_wind_speed_unit_mps_id</string>
    <string name="pref_wind_speed_unit_summary">Choose wind speed measurement units</string>
    <string name="pref_wind_speed_unit_title">Wind speed measurement units</string>
</resources>