<?xml version="1.0" encoding="utf-8"?>
<menu>
    <item n1:icon="@drawable/ic_action_search" n1:id="@id/mi_search_cities" n1:title="@string/mi_search_title" n1:titleCondensed="@string/city_search_hint" n2:actionViewClass="android.support.v7.widget.SearchView" n2:showAsAction="always"
      xmlns:n1="http://schemas.android.com/apk/res/android" xmlns:n2="http://schemas.android.com/apk/res-auto" />
    <item n3:icon="@drawable/ic_add_content" n3:id="@id/mi_add_city" n3:title="Add city" n4:showAsAction="always"
      xmlns:n3="http://schemas.android.com/apk/res/android" xmlns:n4="http://schemas.android.com/apk/res-auto" />
    <item n5:icon="@drawable/ic_action_overflow" n5:id="@id/mi_main_submenu" n5:title="@string/mi_submenu_title" n6:showAsAction="always"
      xmlns:n5="http://schemas.android.com/apk/res/android" xmlns:n6="http://schemas.android.com/apk/res-auto">
        <menu>
            <item n5:icon="@drawable/ic_home" n5:id="@id/mi_city_management" n5:title="@string/mi_city_management_title" n6:showAsAction="never" />
            <item n5:icon="@drawable/ic_settings" n5:id="@id/mi_settings" n5:title="@string/mi_settings_title" n6:showAsAction="never" />
            <item n5:icon="@drawable/ic_action_star_10" n5:id="@id/mi_rate_application" n5:title="@string/mi_rate_application_title" n6:showAsAction="never" />
            <item n5:icon="@drawable/ic_action_book" n5:id="@id/mi_about" n5:title="@string/mi_about_program_title" n6:showAsAction="never" />
        </menu>
    </item>
</menu>